[gd_scene load_steps=5 format=2]

[ext_resource path="res://GameSaveRelated/GUIs/GameSettingsRelated/CustomAudioPanel/GUI_CustomAudioPanel.gd" type="Script" id=1]
[ext_resource path="res://MiscRelated/FontRelated/Fonts/Monogram/monogram.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://ObjectsRelated/Pickupables/Subs/_CusotmDefinedSingleUse/Pickupable_Module_CustomAudio.png" type="Texture" id=3]

[sub_resource type="DynamicFont" id=1]
size = 48
extra_spacing_top = -4
font_data = ExtResource( 2 )

[node name="GUI_CustomAudioPanel" type="MarginContainer"]
margin_right = 960.0
margin_bottom = 540.0
mouse_filter = 2
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 20.0
margin_top = 20.0
margin_right = 940.0
margin_bottom = 520.0
mouse_filter = 2
custom_constants/separation = 40

[node name="DescsContainer" type="MarginContainer" parent="VBoxContainer"]
margin_right = 920.0
margin_bottom = 34.0
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/DescsContainer"]
margin_right = 920.0
margin_bottom = 34.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/DescsContainer/VBoxContainer"]
margin_left = 270.0
margin_right = 649.0
margin_bottom = 34.0
size_flags_horizontal = 6
custom_constants/separation = 22

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/DescsContainer/VBoxContainer/HBoxContainer"]
margin_top = 2.0
margin_right = 33.0
margin_bottom = 32.0
size_flags_vertical = 6
texture = ExtResource( 3 )

[node name="TitleLabel" type="Label" parent="VBoxContainer/DescsContainer/VBoxContainer/HBoxContainer"]
margin_left = 55.0
margin_right = 379.0
margin_bottom = 34.0
custom_colors/font_color = Color( 0.866667, 0.866667, 0.866667, 1 )
custom_fonts/font = SubResource( 1 )
text = "Custom Audio Panel"
align = 1

[node name="InfoContainer" type="MarginContainer" parent="VBoxContainer"]
margin_top = 74.0
margin_right = 920.0
margin_bottom = 161.0
mouse_filter = 2

[node name="Label" type="Label" parent="VBoxContainer/InfoContainer"]
margin_left = 28.0
margin_right = 892.0
margin_bottom = 87.0
size_flags_horizontal = 6
custom_colors/font_color = Color( 0.866667, 0.866667, 0.866667, 1 )
text = "Steps to configure custom audio:
1) Select audio type's folder to open.
2) Add or remove files. Adding 2 or more picks one at random when playing the sound.

You can test the sound by pressing the play test button. Adjust the volume to the desired level."

[node name="MarginerForMainScroll" type="MarginContainer" parent="VBoxContainer"]
margin_top = 201.0
margin_right = 920.0
margin_bottom = 500.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 30
custom_constants/margin_left = 30
custom_constants/margin_bottom = 40

[node name="ScrollContainerForMain" type="ScrollContainer" parent="VBoxContainer/MarginerForMainScroll"]
margin_left = 30.0
margin_right = 890.0
margin_bottom = 259.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MainContainer" type="MarginContainer" parent="VBoxContainer/MarginerForMainScroll/ScrollContainerForMain"]
mouse_filter = 2
size_flags_horizontal = 6

[node name="VBoxForSCAP" type="VBoxContainer" parent="VBoxContainer/MarginerForMainScroll/ScrollContainerForMain/MainContainer"]
mouse_filter = 2
